--- a/templates/msgs/broadcast_schedule_list.haml
+++ b/templates/msgs/broadcast_schedule_list.haml
@@ -1,6 +1,5 @@
 -extends "msgs/message_box.html"
--load smartmin sms temba compress
--load i18n humanize
+-load smartmin sms temba compress i18n humanize
 
 -block title-icon
   %span.title-icon
@@ -16,15 +15,7 @@
           %tr.select-row.cursor-pointer{class:'{% cycle row1 row1 %}', onclick:'document.location="{% url "msgs.broadcast_schedule_read" object.id %}"'}
 
             %td.value-contacts.field_phone
-              -with recipient_counts=object.get_recipient_counts
-                -if recipient_counts.recipients > 0
-                  -blocktrans trimmed with count_comma=recipient_counts.recipients|intcomma count counter=recipient_counts.recipients
-                    {{ count_comma }} recipient
-                    -plural
-                      {{ count_comma }} recipients
-                -else
-                  -blocktrans trimmed with group_count=recipient_counts.groups contact_count=recipient_counts.contacts urn_count=recipient_counts.urns
-                    {{ group_count }} groups, {{ contact_count }} contacts, {{ urn_count }} urns
+              -include "includes/recipients.haml" with groups=object.groups.all contacts=object.contacts.all urns=object.raw_urns
 
             %td.value-text.field_text
               {{ object.get_default_text }}
