--- a/templates/msgs/broadcast_schedule_read.haml
+++ b/templates/msgs/broadcast_schedule_read.haml
@@ -1,9 +1,8 @@
 -extends "smartmin/read.html"
--load smartmin sms temba compress
--load i18n humanize
+-load smartmin sms temba i18n humanize
 
 -block title
-  {{title}}
+  {{ title }}
 
 -block content
   -include "formax.haml"
@@ -11,20 +10,16 @@
     .mt-8.mb-4
       .title
         -trans "Send History"
-    %table.list{style: '{% if not org_perms.msgs.broadcast_send %}margin-top:10px{% endif %}'}
+    %table.list(style='{% if not org_perms.msgs.broadcast_send %}margin-top:10px{% endif %}')
       %tbody
         -for object in object_list
           %tr
             %td
-              -with recipient_counts=object.get_recipient_counts
-                -if recipient_counts.recipients > 0
-                  -blocktrans with count_comma=recipient_counts.recipients|intcomma count counter=recipient_counts.recipients
-                    {{ count_comma }} recipient
-                    -plural
-                      {{ count_comma }} recipients
-                -else
-                  -blocktrans trimmed with group_count=recipient_counts.groups contact_count=recipient_counts.contacts urn_count=recipient_counts.urns
-                    {{ group_count }} groups, {{ contact_count }} contacts, {{ urn_count }} urns
+              -with recipient_count=object.get_message_count
+                -blocktrans trimmed count counter=recipient_count with count_comma=recipient_count|intcomma
+                  {{ count_comma }} recipient
+                -plural
+                  {{ count_comma }} recipients
             %td
               {{ object.get_default_text }}
             %td
@@ -33,4 +28,4 @@
 
     .mx-8
       -block paginator
-        = block.super
+        {{ block.super }}
