--- a/templates/msgs/broadcast_update.haml
+++ b/templates/msgs/broadcast_update.haml
@@ -9,15 +9,10 @@
     -render_field 'message'
 
 -block summary
-  -with recipient_counts=broadcast.get_recipient_counts
-    -if recipient_counts.recipients > 0
-      -blocktrans with count_comma=recipient_counts.recipients|intcomma count counter=recipient_counts.recipients
-        {{ count_comma }} recipients
-        -plural
-          {{ count_comma }} recipients
-    -else
-      -blocktrans trimmed with group_count=recipient_counts.groups contact_count=recipient_counts.contacts urn_count=recipient_counts.urns
-        {{ group_count }} groups, {{ contact_count }} contacts, {{ urn_count }} urns
+  -include "includes/recipients.haml" with groups=broadcast.groups.all contacts=broadcast.contacts.all urns=broadcast.raw_urns
 
-  #broadcast_preview
+  .mt-2
     {{ object.get_default_text }}
+
+
+
