--- a/templates/msgs/msg_outbox.haml
+++ b/templates/msgs/msg_outbox.haml
@@ -1,6 +1,5 @@
-{% extends "msgs/message_box.html" %}
--load smartmin sms temba compress contacts
--load i18n humanize
+-extends "msgs/message_box.html"
+-load smartmin sms temba contacts i18n humanize
 
 -block search-details
   .search-details
@@ -10,22 +9,10 @@
     %tbody
       -for broadcast in pending_broadcasts
         %tr.broadcast
-
           %td.value-phone.field_phone
-            %nobr
-              -with recipient_counts=broadcast.get_recipient_counts
-                -if recipient_counts.recipients > 0
-                  -blocktrans count counter=recipient_counts.recipients
-                    1 recipient
-                    - plural
-                      {{counter}} recipients
-                -else
-                  -blocktrans trimmed with group_count=recipient_counts.groups contact_count=recipient_counts.contacts urn_count=recipient_counts.urns
-                    {{ group_count }} groups, {{ contact_count }} contacts, {{ urn_count }} urns
-
+            -include "includes/recipients.haml" with groups=broadcast.groups.all contacts=broadcast.contacts.all urns=broadcast.raw_urns
           %td.value-text.field_text.wrapped
             {{ broadcast.get_default_text }}
-
           %td.created_on
             %span.time
               {% short_datetime broadcast.created_on %}
@@ -71,7 +58,6 @@
 
 -block extra-style
   {{ block.super }}
-
 
   :css
     .table.list-table tr.broadcast:hover td, .table.list-table tr.broadcast td {
