Style Outbox broadcasts with megaphone icons and use includes for other places we render contacts and groups

--- a/templates/campaigns/campaign_list.haml
+++ b/templates/campaigns/campaign_list.haml
@@ -77,8 +77,7 @@
                       {{obj.name}}
 
                     %td.whitespace-no-wrap
-                      %span.linked{onclick:'goto(event)', href:"{% url 'contacts.contact_filter' obj.group.uuid%}"}
-                        {{ obj.group.name }}
+                      -include "includes/recipients_group.haml" with group=obj.group
 
                     %td.whitespace-no-wrap
                       {{ obj.get_events|length }} event{{ obj.get_events|length|pluralize }}
