--- a/static/icons/demo-files/demo.css
+++ b/static/icons/demo-files/demo.css
@@ -139,12 +139,18 @@ p {
   font-size: 16px;
 }
 .fs1 {
-  font-size: 24px;
+  font-size: 32px;
 }
 .fs2 {
-  font-size: 20px;
+  font-size: 24px;
 }
 .fs3 {
+  font-size: 20px;
+}
+.fs4 {
+  font-size: 16px;
+}
+.fs5 {
   font-size: 32px;
 }
 .name {
