--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -215,8 +215,9 @@
             
             -block post-content
 
-    .footer.text-center.py-12.bg-gray-200.text-gray-500
-      {{ request.branding.credits|safe }}
+    -block footer
+      .footer.text-center.py-12.bg-gray-200.text-gray-500
+        {{ request.branding.credits|safe }}
 
   -trans 'Delete' as title
   %temba-dialog#general-delete-confirmation{header:"{{title|escapejs}}", primaryButtonName:"{{title|escapejs}}", destructive: "true"}
