--- a/templates/links/link_list.haml
+++ b/templates/links/link_list.haml
@@ -69,9 +69,9 @@
               -elif search
                 .mb-4.ml-1.text-base.leading-relaxed
                   -blocktrans with results_count=paginator.count|intcomma count cc=paginator.count
-                    Found {{ results_count }} contact matching <i>{{search}}</i>.
+                    Found {{ results_count }} trackable link matching <i>{{search}}</i>.
                     -plural
-                      Found {{ results_count }} contacts matching <i>{{search}}</i>.
+                      Found {{ results_count }} trackable links matching <i>{{search}}</i>.
 
             %table.list.object-list.lined.selectable
               %tr.links
@@ -108,10 +108,6 @@
 
             .flex.flex-col.mb-16
               -include "includes/pagination.haml"
-
-              -if paginator.is_es_search and not page_obj.has_next_page and page_obj.number == paginator.num_pages and paginator.count > 10000
-                .text-gray-400.text-sm.self-end.mt-2
-                  -trans "To view more than 10,000 search results, save it as a group."
 
 -block extra-script
   {{ block.super }}
