Add blurb for discord and add discord to icon font
Used icomoon to add the discord logo to our icon font, and wrote a short
blurb for discord's channel list entry.

--- a/static/fonts/temba/style.css
+++ b/static/fonts/temba/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'temba';
-  src:  url('fonts/temba.eot?p4yg8w');
-  src:  url('fonts/temba.eot?p4yg8w#iefix') format('embedded-opentype'),
-    url('fonts/temba.ttf?p4yg8w') format('truetype'),
-    url('fonts/temba.woff?p4yg8w') format('woff'),
-    url('fonts/temba.svg?p4yg8w#temba') format('svg');
+  src:  url('fonts/temba.eot?iqf12a');
+  src:  url('fonts/temba.eot?iqf12a#iefix') format('embedded-opentype'),
+    url('fonts/temba.ttf?iqf12a') format('truetype'),
+    url('fonts/temba.woff?iqf12a') format('woff'),
+    url('fonts/temba.svg?iqf12a#temba') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -732,6 +732,9 @@
 }
 .icon-shopping-bag:before {
   content: "\e917";
+}
+.icon-discord:before {
+  content: "\e91d";
 }
 .icon-campaign:before {
   content: "\e919";
