--- a/templates/flows/flow_results.haml
+++ b/templates/flows/flow_results.haml
@@ -461,6 +461,7 @@
         }
         dialog.open = false;
       });
+      $('[data-toggle="tooltip"]').tooltip();
     });
 
     $('a[data-toggle="tab"]').on('shown.bs.tab', function(e){
@@ -705,8 +706,10 @@
                 -trans "Before"
               -include "includes/flatpickr_field.haml" with parent_classes="w-3/4 flex justify-center items-center" field_name="before" field_placeholder="Select a date" field_value=request.GET.before
           %div{class: "w-1/2 flex flex-grow"}
-            %div{class: "w-10/12"}
-              %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="q" value="{{ request.GET.q }}" clearable)
+            %div{class: "w-5/12 mr-2", "data-toggle":"tooltip", title:"{{ request.GET.contact_query }}"}
+              %temba-textinput(type='text' placeholder='{% trans "Search by Contact Fields" %}' name="contact_query" value="{{ request.GET.contact_query }}" clearable)
+            %div{class: "w-5/12", "data-toggle":"tooltip", title:"{{ request.GET.q }}"}
+              %temba-textinput(type='text' placeholder='{% trans "Search by Responses" %}' name="q" value="{{ request.GET.q }}" clearable)
             %div{class: "w-1/12 flex-grow"}
               %button.button-primary.filter-btn(type='submit')
                 -trans "Filter"
@@ -714,7 +717,7 @@
       .scroll-x
         .responded-checkbox.items-center.py-3.w-full
           .runs-show#show-all-runs{
-            ic-get-from:"/flow/run_table/{{object.id}}/?after={{request.GET.after}}&before={{request.GET.before}}&q={{request.GET.q}}",
+            ic-get-from:"/flow/run_table/{{object.id}}/?after={{request.GET.after}}&before={{request.GET.before}}&q={{request.GET.q}}&contact_query={{request.GET.contact_query}}",
             ic-on-beforeSend:'$("#results_run_table").empty();',
             ic-on-beforeTrigger: 'localStorage.setItem("responded", "false");',
             ic-trigger-on:"click",
@@ -724,7 +727,7 @@
           .runs-show-sep
             |
           .runs-show.active{
-              ic-get-from:"/flow/run_table/{{object.id}}/?after={{request.GET.after}}&before={{request.GET.before}}&q={{request.GET.q}}",
+              ic-get-from:"/flow/run_table/{{object.id}}/?after={{request.GET.after}}&before={{request.GET.before}}&q={{request.GET.q}}&contact_query={{request.GET.contact_query}}",
               ic-on-beforeSend:'$("#results_run_table").empty();',
               ic-on-beforeTrigger: 'localStorage.setItem("responded", "true");',
               ic-trigger-on:"click",
@@ -759,7 +762,7 @@
                     .remove.icon-close{ onclick: 'hideColumn({{forloop.counter0}});' }
 
             %tbody{id:"results_run_table"}
-              %tr{ic-append-from:"/flow/run_table/{{object.id}}?after={{request.GET.after}}&before={{request.GET.before}}&q={{request.GET.q}}", ic-trigger-on:"load", ic-target:"#results_run_table", ic-indicator:"#indicator"}
+              %tr{ic-append-from:"/flow/run_table/{{object.id}}?after={{request.GET.after}}&before={{request.GET.before}}&q={{request.GET.q}}&contact_query={{request.GET.contact_query}}", ic-trigger-on:"load", ic-target:"#results_run_table", ic-indicator:"#indicator"}
 
     #links.tab-pane
       - if trackable_links
