--- a/templates/flows/flow_results.haml
+++ b/templates/flows/flow_results.haml
@@ -17,13 +17,12 @@
 
         .custom-date-field {
           width: 100% !important;
-          font-size: 13px;
+          font-size: 14px;
           padding: 7px 7px 6px 7px;
           border-radius: var(--curvature-widget);
           border: 1px solid var(--color-widget-border);
           color: var(--color-widget-text);
           outline: none;
-          margin-top: 5px;
         }
 
         .filter-btn {
@@ -258,6 +257,17 @@
           .modal-body {
             max-height: 450px;
           }
+        }
+
+        .control-label {
+          margin-bottom: 5px;
+          margin-left: 4px;
+          display: block;
+          font-weight: 400;
+          font-size: 13px;
+          letter-spacing: 0.05em;
+          line-height: normal;
+          color: rgb(119, 119, 119);
         }
 
     {% endlessblock %}
@@ -698,20 +708,20 @@
         %form#search-form.max-w-full.mt-2.flex(method="get")
           %div{class: "w-1/4 flex"}
             %div{class: "w-1/2 flex flex-col pr-3"}
-              %label{class: "flex m-0"}
+              %label.control-label.flex.m-0
                 -trans "After"
               -include "includes/flatpickr_field.haml" with parent_classes="flex justify-center items-center" field_name="after" field_placeholder="Select a date" field_value=request.GET.after
             %div{class: "w-1/2 flex flex-col pr-3"}
-              %label{class: "flex m-0"}
+              %label.control-label.flex.m-0
                 -trans "Before"
               -include "includes/flatpickr_field.haml" with parent_classes="flex justify-center items-center" field_name="before" field_placeholder="Select a date" field_value=request.GET.before
           %div{class: "w-3/4 flex flex-grow"}
             %div{class: "w-6/12 mr-2", "data-toggle":"tooltip", title:"{{ request.GET.contact_query }}"}
-              %label{class: "flex m-0"}
+              %label.control-label.flex.m-0
                 -trans "Search by Contact Fields"
               %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="contact_query" value="{{ request.GET.contact_query }}" clearable)
             %div{class: "w-6/12", "data-toggle":"tooltip", title:"{{ request.GET.q }}"}
-              %label{class: "flex m-0"}
+              %label.control-label.flex.m-0
                 -trans "Search by Responses"
               %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="q" value="{{ request.GET.q }}" clearable)
             %div.flex.flex-col.justify-end{class: "w-1/10"}
